Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -12384,7 +12384,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211004091810686" creator="zeid" list="[[Basic lift script]] [[C3/DS CAOS Codes]] [[Making a Vendor for C3]] [[Using the Map Editor - Part 2]] [[Using the Map Editor - Part 1]] [[Chandra - assembly]] [[Zvezda - gitee]] Home" modified="20211004101948740" modifier="zeid" title="$:/StoryList">
+<div created="20211004091810686" creator="zeid" list="[[Coffee css]] [[Making a Vendor for C3]] [[Using the Map Editor - Part 2]] [[Using the Map Editor - Part 1]] [[Chandra - assembly]] [[Zvezda - gitee]] Home" modified="20211004105150284" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -14654,7 +14654,7 @@ $(currentTiddler)$
 
 </pre>
 </div>
-<div created="20210603083811964" creator="zeid" modified="20211004102510141" modifier="zeid" tags="$:/tags/Stylesheet zest" title="Coffee css" type="text/css">
+<div created="20210603083811964" creator="zeid" modified="20211004105210725" modifier="zeid" tags="$:/tags/Stylesheet zest" title="Coffee css" type="text/css">
 <pre>.lua.hljs, .elixir.hljs{
 max-height:300px;
 }
@@ -14684,6 +14684,9 @@ h3{
 
 h4{
 	    color: #ff449e;
+}
+h5{
+	color: #2ca3f7;
 }</pre>
 </div>
 <div _canonical_uri="https://daidalvi.github.io/ja/images/coffee/1a52174bc1bf2efc5d19346faf890d38.jpg" created="20210602084606160" modified="20210602084650935" tags="eimg" title="Coffee1.jpg" type="image/jpeg">
