Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -389,6 +389,8 @@ Error message and password prompt
 
 <li>$:/state/toc/programming-gdbcommand-628207791</li>
 
+<li>$:/state/toc/zest-разное--1261664437</li>
+
 <li>$:/state/toc/zest-разное-1640320810</li>
 
 <li>$:/state/toc/zest/разное-DS-1640320810</li>
@@ -12171,8 +12173,8 @@ Error message and password prompt
 <div created="20210602141535668" creator="zeid" modified="20210831181004809" modifier="zeid" title="$:/state/tab2--1311305590">
 <pre>php</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20211004101947740" modifier="zeid" title="$:/state/tab2--2017306950">
-<pre>zest</pre>
+<div created="20210826160606675" creator="zeid" modified="20211006155308289" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>projects</pre>
 </div>
 <div created="20210826160602899" creator="zeid" modified="20211004101943604" modifier="zeid" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12183,8 +12185,8 @@ Error message and password prompt
 <div created="20210830101055416" modified="20210831134702005" title="$:/state/tab2-1422432489">
 <pre>python</pre>
 </div>
-<div created="20210602141529428" creator="zeid" modified="20210901061652001" modifier="zeid" title="$:/state/tab2-2058192071">
-<pre>projects</pre>
+<div created="20210602141529428" creator="zeid" modified="20211004105442963" modifier="zeid" title="$:/state/tab2-2058192071">
+<pre>zest</pre>
 </div>
 <div created="20210603084225271" modified="20210831115831863" title="$:/state/tab2-678259293">
 <pre>Пак Звезда</pre>
@@ -12372,6 +12374,9 @@ Error message and password prompt
 <div created="20210831180953546" creator="zeid" modified="20210831180953546" modifier="zeid" title="$:/state/toc/programming-gdbcommand-628207791">
 <pre>open</pre>
 </div>
+<div created="20211004105446380" creator="zeid" modified="20211004105446380" modifier="zeid" title="$:/state/toc/zest-разное--1261664437">
+<pre>open</pre>
+</div>
 <div created="20211004100430597" creator="zeid" modified="20211004100430597" modifier="zeid" title="$:/state/toc/zest-разное-1640320810">
 <pre>open</pre>
 </div>
@@ -12384,7 +12389,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211004091810686" creator="zeid" list="[[Coffee css]] [[Making a Vendor for C3]] [[Using the Map Editor - Part 2]] [[Using the Map Editor - Part 1]] [[Chandra - assembly]] [[Zvezda - gitee]] Home" modified="20211004105150284" modifier="zeid" title="$:/StoryList">
+<div created="20211004105448188" creator="zeid" list="[[Криптосервис - задачи]] [[Basic lift script]] [[Chandra - assembly]]" modified="20211006155312929" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12633,8 +12638,12 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20210831115833307" creator="zeid" modified="20210907094740099" modifier="zeid" tags="задачи Криптосервис" title="Криптосервис - задачи">
-<pre>Пользователи сервиса &quot;Облачная звезда&quot; осуществляют доступ к криптосервису через Proxy на основе HTTP-сервера. Необходимо реализовать этот Proxy на PHP.
+<div created="20210831115833307" creator="zeid" modified="20211006155331321" modifier="zeid" tags="задачи Криптосервис" title="Криптосервис - задачи">
+<pre>Сообщение должно быть не менее 20 байт после перевода в бин
+
+----
+
+Пользователи сервиса &quot;Облачная звезда&quot; осуществляют доступ к криптосервису через Proxy на основе HTTP-сервера. Необходимо реализовать этот Proxy на PHP.
 Proxy должен обеспечивать следующий функционал:
 
 `(I) Административные функции:`&lt;br /&gt;
