Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -12175,8 +12175,8 @@ Error message and password prompt
 <div created="20210602141535668" creator="zeid" modified="20210831181004809" modifier="zeid" title="$:/state/tab2--1311305590">
 <pre>php</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20211007073635520" modifier="zeid" title="$:/state/tab2--2017306950">
-<pre>zest</pre>
+<div created="20210826160606675" creator="zeid" modified="20211020130427728" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>projects</pre>
 </div>
 <div created="20210826160602899" creator="zeid" modified="20211004101943604" modifier="zeid" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12391,7 +12391,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211018093554207" creator="zeid" list="Home Sigma-3" modified="20211018093554207" modifier="zeid" title="$:/StoryList">
+<div created="20211020084927496" creator="zeid" list="[[Сайт Пак Звезда]] [[Тестовые сообщения - receiveMsg и receiveData]] [[Chandra - assembly]] Home" modified="20211020135812231" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13531,8 +13531,10 @@ for i in `find . -name '*Image*'`; do mv &quot;${i}&quot; &quot;${i/Image/image}
 ```
 </pre>
 </div>
-<div created="20210826161107998" modified="20210826161510907" tags="[[Пак Звезда]] сайт" title="Сайт Пак Звезда">
-<pre>* https://scorpioza.github.io/zvezda/index.html
+<div created="20210826161107998" creator="zeid" modified="20211020135909495" modifier="zeid" tags="[[Пак Звезда]] сайт" title="Сайт Пак Звезда">
+<pre>* https://www.niime.ru/services/star/index.html
+* Статистика: https://www.niime.ru/services/star/statistic.php
+* Гитхаб: https://scorpioza.github.io/zvezda/index.html
 * Typography: https://bootswatch.com/slate/
 * Icons: https://fontawesome.com/v5.15/icons?d=gallery&amp;p=2&amp;q=share
 * Комиксы: &lt;a href=&quot;Y:\Обменник\Самойлов\комиксы\Ох уж этот ПАК Звезда&quot; target=&quot;_blank&quot;&gt;Y:\Обменник\Самойлов\комиксы\Ох уж этот ПАК Звезда&lt;/a&gt;</pre>
