--- a/cafe.html
+++ b/cafe.html
@@ -511,6 +511,8 @@ Error message and password prompt
 
 <li>crypto_service.ini</li>
 
+<li>Draft of 'Пак Звезда' by zeid</li>
+
 <li>Draft of 'AppService' by zeid</li>
 
 <li>DS</li>
@@ -12178,7 +12180,7 @@ Error message and password prompt
 <div created="20210826160606675" creator="zeid" modified="20211020130427728" modifier="zeid" title="$:/state/tab2--2017306950">
 <pre>projects</pre>
 </div>
-<div created="20210826160602899" creator="zeid" modified="20211004101943604" modifier="zeid" title="$:/state/tab2--2135597508">
+<div created="20210826160602899" creator="zeid" modified="20211025112425415" modifier="zeid" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
 </div>
 <div created="20210602140213588" modified="20210602140717715" title="$:/state/tab2-1422387773">
@@ -12391,7 +12393,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211020084927496" creator="zeid" list="[[Сайт Пак Звезда]] [[Тестовые сообщения - receiveMsg и receiveData]] [[Chandra - assembly]] Home" modified="20211020135812231" modifier="zeid" title="$:/StoryList">
+<div created="20211025112438199" creator="zeid" list="[[Draft of 'Пак Звезда' by zeid]] Home" modified="20211025112438199" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -14773,6 +14775,53 @@ api.admin_feedback_ports = localhost:10011, localhost:10012
 Интересуют все, кроме тех, где admin.
 
 По IN - вызов функции, по OUT - прием ее параметров</pre>
+</div>
+<div created="20210826160041292" creator="zeid" draft.of="Пак Звезда" draft.title="Пак Звезда" modified="20211025112458908" modifier="zeid" tags="projects" title="Draft of 'Пак Звезда' by zeid">
+<pre>Коммуникационный пакет для исходящего сообщения имеет вид:
+
+```css
+PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : tuple]
+
+```
+
+Все интерфейсы описаны в [[src/apps/Zvezda/crypto_service/api|Криптосервис - api]]. 
+
+Идентификаторы функций – это порядковый номер функций, начиная сверху. 
+
+Документы `doc/utils/rpc`: 
+
+* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/11gEqebJ5DZnJArUtad3bpxqDJeQXSZQx/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;RPC technology.docx&lt;/a&gt;
+* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/1HtpwbORJq6kVyCH_CK1WvFi-DE5ziPNO/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;Примеры вызовов функций криптосервиса.docx&lt;/a&gt;
+* D:\mikron\trunk\doc\applications\iot\trust_iot.doc
+
+`info`:
+
+&lt;&lt;list-links &quot;[tag[Криптосервис]tag[info]sort[title]]&quot;&gt;&gt;
+
+
+`задачи`:
+
+&lt;&lt;list-links &quot;[tag[Криптосервис]tag[задачи]sort[title]]&quot;&gt;&gt;
+
+`api`:
+
+&lt;&lt;list-links &quot;[tag[Криптосервис]tag[api]sort[title]]&quot;&gt;&gt;
+
+`php`:
+
+&lt;&lt;list-links &quot;[tag[Криптосервис]tag[php]sort[title]]&quot;&gt;&gt;
+
+`zdl`:
+
+&lt;&lt;list-links &quot;[tag[Криптосервис]tag[zdl]sort[title]]&quot;&gt;&gt;
+
+---
+
+&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'Пак Звезда'&gt;&gt;
+
+&lt;/div&gt;</pre>
 </div>
 <div created="20210831143800730" creator="zeid" draft.title="src/apps/Zvezda/crypto_service/api" modified="20210831143800730" modifier="zeid" title="Draft of 'AppService' by zeid">
 <pre></pre>
