--- a/cafe.html
+++ b/cafe.html
@@ -511,8 +511,6 @@ Error message and password prompt
 
 <li>crypto_service.ini</li>
 
-<li>Draft of 'Пак Звезда' by zeid</li>
-
 <li>Draft of 'AppService' by zeid</li>
 
 <li>DS</li>
@@ -12393,7 +12391,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211025112438199" creator="zeid" list="[[Draft of 'Пак Звезда' by zeid]] Home" modified="20211025112438199" modifier="zeid" title="$:/StoryList">
+<div created="20211025112438199" creator="zeid" list="[[Пак Звезда]] Home" modified="20211025112438199" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13209,7 +13207,7 @@ var_dump($x);*/
 <div created="20210603092730831" modified="20210603095222158" tags="" title="Отображать тип проекта (LHD-RV) при генерации">
 <pre>Отображение типа проекта (LHD-RV/LHD) при замене старого существующего проекта при генерации из .lhd-файла</pre>
 </div>
-<div created="20210826160041292" creator="zeid" modified="20210902122503053" modifier="zeid" tags="projects" title="Пак Звезда">
+<div created="20210826160041292" creator="zeid" modified="20211025112505543" modifier="zeid" tags="projects" title="Пак Звезда">
 <pre>Коммуникационный пакет для исходящего сообщения имеет вид:
 
 ```css
@@ -13225,7 +13223,7 @@ PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : 
 
 * &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/11gEqebJ5DZnJArUtad3bpxqDJeQXSZQx/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;RPC technology.docx&lt;/a&gt;
 * &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/1HtpwbORJq6kVyCH_CK1WvFi-DE5ziPNO/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;Примеры вызовов функций криптосервиса.docx&lt;/a&gt;
-
+* D:\mikron\trunk\doc\applications\iot\trust_iot.doc
 
 `info`:
 
@@ -14775,53 +14773,6 @@ api.admin_feedback_ports = localhost:10011, localhost:10012
 Интересуют все, кроме тех, где admin.
 
 По IN - вызов функции, по OUT - прием ее параметров</pre>
-</div>
-<div created="20210826160041292" creator="zeid" draft.of="Пак Звезда" draft.title="Пак Звезда" modified="20211025112458908" modifier="zeid" tags="projects" title="Draft of 'Пак Звезда' by zeid">
-<pre>Коммуникационный пакет для исходящего сообщения имеет вид:
-
-```css
-PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : tuple]
-
-```
-
-Все интерфейсы описаны в [[src/apps/Zvezda/crypto_service/api|Криптосервис - api]]. 
-
-Идентификаторы функций – это порядковый номер функций, начиная сверху. 
-
-Документы `doc/utils/rpc`: 
-
-* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/11gEqebJ5DZnJArUtad3bpxqDJeQXSZQx/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;RPC technology.docx&lt;/a&gt;
-* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/1HtpwbORJq6kVyCH_CK1WvFi-DE5ziPNO/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;Примеры вызовов функций криптосервиса.docx&lt;/a&gt;
-* D:\mikron\trunk\doc\applications\iot\trust_iot.doc
-
-`info`:
-
-&lt;&lt;list-links &quot;[tag[Криптосервис]tag[info]sort[title]]&quot;&gt;&gt;
-
-
-`задачи`:
-
-&lt;&lt;list-links &quot;[tag[Криптосервис]tag[задачи]sort[title]]&quot;&gt;&gt;
-
-`api`:
-
-&lt;&lt;list-links &quot;[tag[Криптосервис]tag[api]sort[title]]&quot;&gt;&gt;
-
-`php`:
-
-&lt;&lt;list-links &quot;[tag[Криптосервис]tag[php]sort[title]]&quot;&gt;&gt;
-
-`zdl`:
-
-&lt;&lt;list-links &quot;[tag[Криптосервис]tag[zdl]sort[title]]&quot;&gt;&gt;
-
----
-
-&lt;div class=&quot;tc-table-of-contents&quot;&gt;
-
-&lt;&lt;toc-selective-expandable 'Пак Звезда'&gt;&gt;
-
-&lt;/div&gt;</pre>
 </div>
 <div created="20210831143800730" creator="zeid" draft.title="src/apps/Zvezda/crypto_service/api" modified="20210831143800730" modifier="zeid" title="Draft of 'AppService' by zeid">
 <pre></pre>
