--- a/cafe.html
+++ b/cafe.html
@@ -547,6 +547,8 @@ Error message and password prompt
 
 <li>MIDataDisassemble</li>
 
+<li>Package electron into one single exe</li>
+
 <li>php</li>
 
 <li>PHP - display errors</li>
@@ -12175,10 +12177,10 @@ Error message and password prompt
 <div created="20210602141535668" creator="zeid" modified="20210831181004809" modifier="zeid" title="$:/state/tab2--1311305590">
 <pre>php</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20211020130427728" modifier="zeid" title="$:/state/tab2--2017306950">
-<pre>projects</pre>
+<div created="20210826160606675" creator="zeid" modified="20211025142443622" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>zest</pre>
 </div>
-<div created="20210826160602899" creator="zeid" modified="20211025112425415" modifier="zeid" title="$:/state/tab2--2135597508">
+<div created="20210826160602899" creator="zeid" modified="20211004101943604" modifier="zeid" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
 </div>
 <div created="20210602140213588" modified="20210602140717715" title="$:/state/tab2-1422387773">
@@ -12391,7 +12393,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211025112438199" creator="zeid" list="[[Пак Звезда]] Home" modified="20211025112438199" modifier="zeid" title="$:/StoryList">
+<div created="20211025142444111" creator="zeid" list="[[Package electron into one single exe]] Home" modified="20211025142444111" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13207,7 +13209,7 @@ var_dump($x);*/
 <div created="20210603092730831" modified="20210603095222158" tags="" title="Отображать тип проекта (LHD-RV) при генерации">
 <pre>Отображение типа проекта (LHD-RV/LHD) при замене старого существующего проекта при генерации из .lhd-файла</pre>
 </div>
-<div created="20210826160041292" creator="zeid" modified="20211025112505543" modifier="zeid" tags="projects" title="Пак Звезда">
+<div created="20210826160041292" creator="zeid" modified="20210902122503053" modifier="zeid" tags="projects" title="Пак Звезда">
 <pre>Коммуникационный пакет для исходящего сообщения имеет вид:
 
 ```css
@@ -13223,7 +13225,7 @@ PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : 
 
 * &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/11gEqebJ5DZnJArUtad3bpxqDJeQXSZQx/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;RPC technology.docx&lt;/a&gt;
 * &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/1HtpwbORJq6kVyCH_CK1WvFi-DE5ziPNO/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;Примеры вызовов функций криптосервиса.docx&lt;/a&gt;
-* D:\mikron\trunk\doc\applications\iot\trust_iot.doc
+
 
 `info`:
 
@@ -15265,6 +15267,21 @@ The important
 	}
 ```
 </pre>
+</div>
+<div created="20211026095047286" creator="zeid" modified="20211026095221987" modifier="zeid" tags="nodejs electron portable" title="Package electron into one single exe">
+<pre>Answer:
+
+&lt;&lt;&lt;
+I read that electron-builder can build electron app into just one single exe file. May I know if possible to use command line to achieve this without involve using any configuration file? Is there any reference guide that demonstrate this feature using purely command line
+&lt;&lt;&lt;
+
+Response:
+
+```properties
+npx electron-builder build --win portable
+```
+
+https://github.com/electron-userland/electron-builder/issues/3473</pre>
 </div>
 <div created="20210826161928100" modified="20210826161935196" tags="code" title="php">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
