--- a/cafe.html
+++ b/cafe.html
@@ -12393,7 +12393,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211025142444111" creator="zeid" list="[[Package electron into one single exe]] Home" modified="20211025142444111" modifier="zeid" title="$:/StoryList">
+<div created="20211123154523572" creator="zeid" list="[[Chandra - assembly]] Home" modified="20211123154523572" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
