Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -547,6 +547,8 @@ Error message and password prompt
 
 <li>MIDataDisassemble</li>
 
+<li>New Tiddler</li>
+
 <li>Package electron into one single exe</li>
 
 <li>php</li>
@@ -12393,7 +12395,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211123154523572" creator="zeid" list="[[Chandra - assembly]] Home" modified="20211123154523572" modifier="zeid" title="$:/StoryList">
+<div created="20211124102828492" creator="zeid" list="[[New Tiddler]] Home" modified="20211124112237701" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -15267,6 +15269,9 @@ The important
 	}
 ```
 </pre>
+</div>
+<div created="20211124113526786" creator="zeid" modified="20211124113546418" modifier="zeid" tags="" title="New Tiddler">
+<pre>&lt;iframe src=&quot;https://vk.com/zeidmare&quot; style=&quot;width:100%; height:700px;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
 <div created="20211026095047286" creator="zeid" modified="20211026095221987" modifier="zeid" tags="nodejs electron portable" title="Package electron into one single exe">
 <pre>Answer:
