--- a/cafe.html
+++ b/cafe.html
@@ -511,6 +511,8 @@ Error message and password prompt
 
 <li>crypto_service.ini</li>
 
+<li>Daidalvi WP</li>
+
 <li>Draft of 'AppService' by zeid</li>
 
 <li>DS</li>
@@ -546,8 +548,6 @@ Error message and password prompt
 <li>meri</li>
 
 <li>MIDataDisassemble</li>
-
-<li>New Tiddler</li>
 
 <li>Package electron into one single exe</li>
 
@@ -12395,7 +12395,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211124102828492" creator="zeid" list="[[New Tiddler]] Home" modified="20211124112237701" modifier="zeid" title="$:/StoryList">
+<div created="20211124102828492" creator="zeid" list="[[Daidalvi WP]] Home" modified="20211124112237701" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -14778,6 +14778,9 @@ api.admin_feedback_ports = localhost:10011, localhost:10012
 
 По IN - вызов функции, по OUT - прием ее параметров</pre>
 </div>
+<div created="20211124113526786" creator="zeid" modified="20211124113641182" modifier="zeid" tags="разное" title="Daidalvi WP">
+<pre>&lt;iframe src=&quot;https://daidalvi.wordpress.com&quot; style=&quot;width:100%; height:700px;&quot;&gt;&lt;/iframe&gt;</pre>
+</div>
 <div created="20210831143800730" creator="zeid" draft.title="src/apps/Zvezda/crypto_service/api" modified="20210831143800730" modifier="zeid" title="Draft of 'AppService' by zeid">
 <pre></pre>
 </div>
@@ -15269,9 +15272,6 @@ The important
 	}
 ```
 </pre>
-</div>
-<div created="20211124113526786" creator="zeid" modified="20211124113546418" modifier="zeid" tags="" title="New Tiddler">
-<pre>&lt;iframe src=&quot;https://vk.com/zeidmare&quot; style=&quot;width:100%; height:700px;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
 <div created="20211026095047286" creator="zeid" modified="20211026095221987" modifier="zeid" tags="nodejs electron portable" title="Package electron into one single exe">
 <pre>Answer:
