--- a/cafe.html
+++ b/cafe.html
@@ -12395,7 +12395,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211124102828492" creator="zeid" list="[[Daidalvi WP]] Home" modified="20211124112237701" modifier="zeid" title="$:/StoryList">
+<div created="20211124102828492" creator="zeid" list="[[Chandra - assembly]] [[Daidalvi WP]] Home" modified="20211124161543455" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -14641,8 +14641,10 @@ Transclusion expansion time report (%,ms,calls,template)
  --&gt;
 &lt;/div&gt;</pre>
 </div>
-<div created="20210601142528406" modified="20210607093530952" tags="разное" title="Chandra - assembly" type="">
-<pre>&lt;iframe src=&quot;https://daidalvi.github.io/moon/index.html&quot; style=&quot;width:100%; height:700px;&quot;&gt;&lt;/iframe&gt;</pre>
+<div created="20210601142528406" creator="zeid" modified="20211124161550780" modifier="zeid" tags="разное" title="Chandra - assembly" type="">
+<pre>https://vk.com/topic-151960736_46955187
+
+&lt;iframe src=&quot;https://daidalvi.github.io/moon/index.html&quot; style=&quot;width:100%; height:700px;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
 <div created="20210603093129001" modified="20210603094308030" tags="" title="checklist">
 <pre>\define checklist()
