Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -14641,9 +14641,8 @@ Transclusion expansion time report (%,ms,calls,template)
  --&gt;
 &lt;/div&gt;</pre>
 </div>
-<div created="20210601142528406" creator="zeid" modified="20211124161550780" modifier="zeid" tags="разное" title="Chandra - assembly" type="">
-<pre>https://vk.com/topic-151960736_46955187
-
+<div created="20210601142528406" creator="zeid" modified="20211124161719865" modifier="zeid" tags="разное" title="Chandra - assembly" type="">
+<pre>
 &lt;iframe src=&quot;https://daidalvi.github.io/moon/index.html&quot; style=&quot;width:100%; height:700px;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
 <div created="20210603093129001" modified="20210603094308030" tags="" title="checklist">
