--- a/cafe.html
+++ b/cafe.html
@@ -12395,7 +12395,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211124102828492" creator="zeid" list="разное [[Chandra - assembly]] [[Daidalvi WP]] Home" modified="20211124161721577" modifier="zeid" title="$:/StoryList">
+<div created="20211124161817817" creator="zeid" list="Home разное" modified="20211124161817817" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13495,7 +13495,7 @@ List&lt;Position&gt; positions = getDocumentManagedPositions().get(category);
 возвращает список с одной некорректной позицией
 </pre>
 </div>
-<div created="20210601144335278" creator="zeid" modified="20211124161748076" modifier="zeid" tags="zest" title="разное">
+<div created="20210601144335278" creator="zeid" modified="20211124161829513" modifier="zeid" tags="zest" title="разное">
 <pre>&lt;a target=&quot;_blank&quot; href=&quot;https://vk.com/topic-151960736_46955187&quot;&gt;Темы&lt;/a&gt;
 
 &lt;div class=&quot;tc-table-of-contents&quot;&gt;
@@ -14644,8 +14644,7 @@ Transclusion expansion time report (%,ms,calls,template)
 &lt;/div&gt;</pre>
 </div>
 <div created="20210601142528406" creator="zeid" modified="20211124161719865" modifier="zeid" tags="разное" title="Chandra - assembly" type="">
-<pre>
-&lt;iframe src=&quot;https://daidalvi.github.io/moon/index.html&quot; style=&quot;width:100%; height:700px;&quot;&gt;&lt;/iframe&gt;</pre>
+<pre>&lt;iframe src=&quot;https://daidalvi.github.io/moon/index.html&quot; style=&quot;width:100%; height:700px;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
 <div created="20210603093129001" modified="20210603094308030" tags="" title="checklist">
 <pre>\define checklist()
