Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -12395,7 +12395,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20211124161817817" creator="zeid" list="Home разное" modified="20211124161817817" modifier="zeid" title="$:/StoryList">
+<div created="20211124161817817" creator="zeid" list="разное" modified="20211124161817817" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13495,8 +13495,9 @@ List&lt;Position&gt; positions = getDocumentManagedPositions().get(category);
 возвращает список с одной некорректной позицией
 </pre>
 </div>
-<div created="20210601144335278" creator="zeid" modified="20211124161829513" modifier="zeid" tags="zest" title="разное">
-<pre>&lt;a target=&quot;_blank&quot; href=&quot;https://vk.com/topic-151960736_46955187&quot;&gt;Темы&lt;/a&gt;
+<div created="20210601144335278" creator="zeid" modified="20211124161952263" modifier="zeid" tags="zest" title="разное">
+<pre>&lt;a target=&quot;_blank&quot; href=&quot;https://vk.com/topic-151960736_46955187&quot;&gt;Темы&lt;/a&gt; - 
+&lt;a target=&quot;_blank&quot; href=&quot;https://vk.com/zeidmare&quot;&gt;Zeidmare&lt;/a&gt;
 
 &lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
